fixed contact form on contack page spillout issue

--- a/style.css
+++ b/style.css
@@ -836,6 +836,40 @@ footer{
     gap: 50px;
     margin-inline: auto;
 }
+
+/* contact page form  */
+.contact-form_f{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 50px;
+    padding-inline: 20px;
+}
+.contact-form_f>div>label{
+    display: block;
+}
+.contact-form_f>div>input:not(.submit-btn), .contact-form_f>div>select{
+    width: 100%;
+    height: 50px;
+    border-radius: 8px;
+    margin-top: 10px;
+}
+.select-services-grid>div:nth-child(2){
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 40px;
+}
+.contact-form-submit-btn>input{
+    /* width: 100%; */
+    height: 50px;
+    border-radius: 8px;
+}
+.contact-form-submit-btn{
+    display: flex;
+    justify-content: center;
+}
+
+
+
 /* for tablet screen */
 @media(max-width:1020px) {
     body{
@@ -1246,9 +1280,6 @@ footer{
         border-radius: 8px;
         
     }
-    .col-span2{
-        grid-column:1/1;
-    }
     .service-event{
         font-size: 14px;
     }
@@ -1543,4 +1574,19 @@ footer{
         padding-inline: 10px;
     }
 
+    .contact-form_f{
+        grid-template-columns:1fr;
+        gap: 20px;
+        padding-inline: 20px;
+    }
+    
+    .col-span2{
+        grid-column:1/ span 1;
+    }
+
+    .select-services-grid>div:nth-child(2){
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    
+    }
 }
